# paper-key

./: INSTALL.md  NOTICE  README.md  SUPPORT.md  app.js  index.html  package-lock.json  package.json  style.css
scripts/: fetch-sounds.sh  release.sh
src/: app.js  index.html  onboarding.css  onboarding.js  style.css  synth.js  typing.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
